minor bug fixes for database and layout changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,6 +140,7 @@
                 android:id="@+id/btn_start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="invisible"
                 android:text="Start Pedometer" />
 
             <Button
@@ -151,6 +152,7 @@
             <Button
                 android:id="@+id/test"
                 android:layout_width="match_parent"
+                android:visibility="invisible"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
