--- a/app/src/main/res/drawable/ic_button_confirm_3.xml
+++ b/app/src/main/res/drawable/ic_button_confirm_3.xml
@@ -7,7 +7,7 @@
       android:pathData="M3.347,1.432L51.015,1.432A3.347,3.347 0,0 1,54.362 4.779L54.362,40.664A3.347,3.347 0,0 1,51.015 44.011L3.347,44.011A3.347,3.347 0,0 1,0 40.664L0,4.779A3.347,3.347 0,0 1,3.347 1.432z"
       android:strokeLineJoin="round"
       android:strokeWidth="0"
-      android:fillColor="#00140e"
+      android:fillColor="#1a1a1a"
       android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
@@ -21,7 +21,7 @@
       android:pathData="M6.694,4.421L47.669,4.421A2.877,2.877 0,0 1,50.546 7.298L50.546,38.145A2.877,2.877 0,0 1,47.669 41.022L6.694,41.022A2.877,2.877 0,0 1,3.816 38.145L3.816,7.298A2.877,2.877 0,0 1,6.694 4.421z"
       android:strokeLineJoin="round"
       android:strokeWidth="0"
-      android:fillColor="#00140e"
+      android:fillColor="#4d4d4d"
       android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
