--- a/app/src/main/res/drawable/ic_button_exit_3.xml
+++ b/app/src/main/res/drawable/ic_button_exit_3.xml
@@ -7,7 +7,7 @@
         android:pathData="M3.931,1.432L46.069,1.432A3.931,3.931 0,0 1,50 5.363L50,47.501A3.931,3.931 0,0 1,46.069 51.432L3.931,51.432A3.931,3.931 0,0 1,0 47.501L0,5.363A3.931,3.931 0,0 1,3.931 1.432z"
         android:strokeLineJoin="round"
         android:strokeWidth="0"
-        android:fillColor="#00140e"
+        android:fillColor="#1a1a1a"
         android:strokeColor="#000000"
         android:strokeLineCap="round"/>
     <path
@@ -21,7 +21,7 @@
         android:pathData="M6.889,4.942L43.111,4.942A3.379,3.379 0,0 1,46.49 8.321L46.49,44.543A3.379,3.379 0,0 1,43.111 47.922L6.889,47.922A3.379,3.379 0,0 1,3.51 44.543L3.51,8.321A3.379,3.379 0,0 1,6.889 4.942z"
         android:strokeLineJoin="round"
         android:strokeWidth="0"
-        android:fillColor="#00140e"
+        android:fillColor="#4d4d4d"
         android:strokeColor="#000000"
         android:strokeLineCap="round"/>
     <path
