--- a/app/src/main/res/layout/about_popup.xml
+++ b/app/src/main/res/layout/about_popup.xml
@@ -23,6 +23,13 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.05"/>
 
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/himageguideline2"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.07"/>
+
 
         <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
@@ -43,7 +50,7 @@
             app:layout_constraintEnd_toEndOf="@id/popup"
             app:layout_constraintTop_toTopOf="@id/popup"/>
 
-        <ScrollView
+        <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:fadeScrollbars="false"
@@ -51,7 +58,16 @@
             app:layout_constraintStart_toEndOf="@id/himageguideline"
             app:layout_constraintTop_toTopOf="@id/vborderguideline"
             app:layout_constraintHeight_percent="0.85"
-            app:layout_constraintWidth_percent="0.9">
+            app:layout_constraintWidth_percent="0.9"/>
+
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:fadeScrollbars="false"
+            app:layout_constraintStart_toEndOf="@id/himageguideline2"
+            app:layout_constraintTop_toTopOf="@id/vborderguideline"
+            app:layout_constraintHeight_percent="0.85"
+            app:layout_constraintWidth_percent="0.87">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
